[gd_scene load_steps=4 format=2]

[ext_resource path="res://EvilOfficer.gd" type="Script" id=1]
[ext_resource path="res://sprites/evil-soldier.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.71398, 21.7086 )

[node name="EvilOfficer" type="KinematicBody2D" groups=[
"officer",
]]
collision_layer = 32
collision_mask = 33
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.20831 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RayOnEchelleTop" type="RayCast2D" parent="."]
position = Vector2( 8.73789, 2.91947 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="RayOnEchelleTopL" type="RayCast2D" parent="."]
position = Vector2( -8.55843, 2.91947 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="RayOnEchelleBot" type="RayCast2D" parent="."]
position = Vector2( 7.30197, 20.1209 )
rotation = -0.349066
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 2

[node name="RayOnEchelleBotL" type="RayCast2D" parent="."]
position = Vector2( -7.302, 20.1209 )
rotation = 0.349066
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 2
